TESTS: fix tests